@@ -1,3 +1,8 @@
+2010-06-10  Dustin J. Mitchell <dustin@zmanda.com>
+	* perl/Amanda/Recovery/Planner.pm: fix matching on filelists - fixes
+	  problems with amidxtaped: "Specified file list matches multiple
+	  dumps"
+
 2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Report.pm: Set dump_failed and dump_strange flags.
 	* server-src/amreport.pl: Add STRANGE or MISSING to email subject.
